# camkes-vm-examples

apps/Arm/case_tablet/: CMakeLists.txt  settings.cmake
apps/Arm/case_tablet/exynos5422/: devices.camkes
